--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    
+    "dev": "nodemon index.js",
+    "build": "npm run",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
