--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/socket.io": "^3.0.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.4"
