--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/dotenv": "^8.2.0",
     "@types/socket.io": "^3.0.2",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "nodemon": "^3.1.0",
