--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/dotenv": "^8.2.0",
     "@types/socket.io": "^3.0.2",
+    "agora-access-token": "^2.0.4",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
